# obs-xxq

./: .gitmodules  CMakeLists.txt  README  conanfile.py  conanfile_x64.py  conanfile_x86.py  package.py  package_x64.py
plugins/beauty-filter/: CMakeLists.txt  bd-thread.cpp  bd-thread.h  beauty-filter.cpp  beauty-handle.cpp  beauty-handle.h
plugins/beauty-filter/beautifysource/: BEFEffectGLContext.cpp  BEFEffectGLContext.h  BEFPlatformDefine.h  be_composer_node.cpp  be_defines.h  be_resource_context.cpp  be_resource_context.h  be_util.cpp  be_util.h
plugins/obs-backgroundremoval/: CMakeLists.txt
plugins/obs-backgroundremoval/src/: Model.h  background-filter.cpp  plugin-main.cpp  plugin.h
plugins/obs-filters/: CMakeLists.txt  noise-suppress-filter.c  obs-filters.c  obs-shader-filter.c
plugins/obs-filters/data/: rounded_rect.shader  transparent.shader
plugins/obs-outputs/: CMakeLists.txt  ftl-stream.c  obs-outputs.c  raw-output.c  rtmp-stream.c  rtmp-stream.h
plugins/obs-outputs/librtmp/: handshake.h  log.c  log.h  rtmp.c  rtmp.h
plugins/obs-qmlview/: AudioLiveLink.qml  AudioWave.qml  BatterRectangle.qml  CMakeLists.txt  CircularRectangle.qml  CommonAnimateImage.qml  FansTarget.qml  FirstRankList.qml  GiftTV.qml  ImageSlideShow.qml  Leave.qml  Mask.qml  NewCommon.qml  NewFollow.qml  NewRank.qml  NewReward.qml  NewTimer.qml  NewVote.qml  Private.qml  Rank.qml  TextSlideShow.qml  audio-live-link.cpp  audio-live-link.h  audiowave.cpp  audiowave.h  browser.qml  defines.h  enter-room.cpp  enter-room.h  fans-target.cpp  fans-target.h  first-rank-list.cpp  first-rank-list.h  gift-tv.cpp  gift-tv.h  imageslideshow.cpp  imageslideshow.h  leave.cpp  leave.h  mask.cpp  (+30 more)
plugins/obs-qmlview/image/: choosing.apng  fail.apng
plugins/obs-shaderfilter/: CMakeLists.txt
plugins/obs-text/: CMakeLists.txt
plugins/obs-text/gdiplus/: Common.h  GauseBlur.cpp  GauseBlur.h  ScrollTextSource.cpp  ScrollTextSource.h  SlideTextSource.cpp  SlideTextSource.h  TimerSource.cpp  obs-text.cpp
plugins/phone-camera/: CMakeLists.txt  android-camera.cpp  android-camera.h  common.h  driver-helper.cpp  driver-helper.h  ffmpeg-decode.c  ffmpeg-decode.h  ios-camera.cpp  ios-camera.h  ipc.c  ipc.h  media-task.h  phone-camera.cpp  phone-camera.h  plugin-main.cpp  usb-helper.cpp  usb-helper.h  xxq-tcp.cpp  xxq-tcp.h
plugins/phone-camera/device-helper/: CMakeLists.txt  DriverHelper.cpp  InformationWidget.cpp  InformationWidget.h  main.cpp
plugins/phone-camera/driver-installer/: CMakeLists.txt  DriverHelper.h  main.cpp
plugins/phone-camera/mobile-media-backend/: CMakeLists.txt  android-camera.cpp  android-camera.h  application.cpp  application.h  c-util.cpp  c-util.h  driver-helper.cpp  driver-helper.h  ios-camera.cpp  ios-camera.h  ios-screen-mirror-task-thread.cpp  ios-screen-mirror-task-thread.h  main.cpp  media-source.cpp  media-source.h  media-task.cpp  media-task.h  usb-device-reset-helper.cpp  usb-device-reset-helper.h  usb-helper.cpp  usb-helper.h
plugins/rtc-output/: CMakeLists.txt  rtc-base.cpp  rtc-base.h  rtc-define.h  rtc-output.cpp  rtc-output.h  rtc-param.cpp  rtc-param.h
plugins/rtc-output/qnrtc/: qiniurtc.cpp  qiniurtc.h
plugins/rtc-output/trtc/: DataCenter.cpp  DataCenter.h  GenerateTestUserSig.cpp  GenerateTestUserSig.h  TRTCCloudCore.cpp  TRTCCloudCore.h  trtc.cpp  trtc.h
plugins/srt-output/: CMakeLists.txt  amf.c  amf.h  autofree.h  bit_stream.cpp  bit_stream.h  buffer.cpp  buffer.h  flv-mux.c  srt-helpers.h  srt-output.c  srt-output.cpp  srt-plugins.cpp  ts.cpp  ts.h
plugins/wasapi-capture/: CMakeLists.txt  plugin-main.c  wasapi-capture.c  wasapi-capture.h  wasapi-hook-info.h  windows-helpers.cpp
plugins/wasapi-capture/get-wasapi-offsets/: CMakeLists.txt  get-wasapi-offsets.cpp
plugins/wasapi-capture/wasapi-hook/: CMakeLists.txt  funchook.h  wasapi-hook.c  wasapi-hook.h  wasapi_capture_proxy.cpp  wasapi_capture_proxy.h  wasapi_capturer.cpp  wasapi_capturer.h
plugins/win-airplay/: Airplay2Def.h  Airplay2Export.cpp  Airplay2Head.h  CAirServer.cpp  CAirServer.h  CAirServerCallback.cpp  CAirServerCallback.h  CMakeLists.txt  FgAirplayChannel.cpp  FgAirplayChannel.h  FgAirplayServer.cpp  FgAirplayServer.h  Resource.rc  VideoDecoder.cpp  VideoDecoder.h  airplay-server.cpp  airplay-server.h  common-define.h  d3d11va_decoder.cc  d3d11va_decoder.h  d3d11va_renderer.cc  d3d11va_renderer.h  d3d9_renderer.cc  d3d9_renderer.h  dxva2_decoder.cc  dxva2_decoder.h  dxva2_renderer.cc  dxva2_renderer.h  ipc.c  ipc.h  mirror_server.cpp  mirror_server.h  resource.h  tool.cpp  tool.h
plugins/win-airplay/airplay/: CMakeLists.txt  airplay-server.rc  rpiplay.cpp
plugins/win-airplay/airplay2/: Airplay2Export.cpp  Airplay2Head.h  CAirServer.cpp  CAirServer.h  CAirServerCallback.cpp  CAirServerCallback.h  CMakeLists.txt  FgAirplayChannel.cpp  FgAirplayChannel.h  FgAirplayServer.cpp  FgAirplayServer.h  main.cpp  resource.h
plugins/win-airplay/androidaoa/: AOADeviceManager.cpp  AOADeviceManager.h  CMakeLists.txt  DriverHelper.cpp  DriverHelper.h  InformationWidget.cpp  InformationWidget.h  main.cpp
plugins/win-airplay/androidusbmirror/: CMakeLists.txt  command.c  command.h  config.h  device.h  main.cpp  server.c  server.cpp  server.h  stream.c  stream.cpp  stream.h
plugins/win-airplay/drivertool/: AppleDeviceManager.cpp  AppleDeviceManager.h  CMakeLists.txt  DriverHelper.cpp  DriverHelper.h  main.cpp
plugins/win-airplay/img/: resource.qrc
plugins/win-airplay/iosqtvusbmirror/: AppleDeviceManager.cpp  AppleDeviceManager.h  CMakeLists.txt  DriverHelper.cpp  DriverHelper.h  InformationWidget.cpp  InformationWidget.h  MirrorManager.cpp  MirrorManager.h  main.cpp
plugins/win-airplay/iosusbmirror/: CMakeLists.txt  asyn_feed.c  asyn_feed.h  async_packet.c  audio_stream_basic_description.c  audio_stream_basic_description.h  client.c  consumer.c  (+20 more)
plugins/win-dshow/: CMakeLists.txt  Resource.rc  dshow-plugin.cpp  ffmpeg-decode.c  ffmpeg-decode.h  win-dshow.cpp  win-dshow.h
plugins/win-wasapi/: CMakeLists.txt  plugin-main.cpp  pure-audio-source.cpp  win-wasapi.cpp  xxq-aec.cpp  xxq-aec.h
(+481 files in other folders)
